# Owlo-project

./: .gitignore  .qmake.stash  CMakeLists.txt  Dockerfile  FrameProvider.cpp  FrameProvider.h  HeatmapWidget.cpp  HeatmapWidget.h  Makefile  Makefile.Debug  Makefile.Release  ProfileWidget.cpp  ProfileWidget.h  README.md  main.cpp  owloApp.pro
